[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/UI/option_selected.png" type="Texture" id=1]
[ext_resource path="res://asset/UI/option.png" type="Texture" id=2]
[ext_resource path="res://asset/UI/board.png" type="Texture" id=3]
[ext_resource path="res://scene/oftenUsedScn/optionButton.gd" type="Script" id=4]
[ext_resource path="res://asset/UI/check ijo.png" type="Texture" id=5]
[ext_resource path="res://asset/UI/checklist ijo pressed.png" type="Texture" id=6]
[ext_resource path="res://asset/UI/x red.png" type="Texture" id=7]
[ext_resource path="res://asset/UI/x red pressed.png" type="Texture" id=8]
[ext_resource path="res://asset/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 9 )

[node name="optionButton" type="CanvasLayer"]
layer = 11
script = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 1280.0
margin_bottom = 744.0
color = Color( 0.160784, 0.160784, 0.160784, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Sprite" parent="Node2D"]
position = Vector2( 640, 369 )
scale = Vector2( 1.21429, 1.21429 )
texture = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="Node2D"]
margin_left = 656.0
margin_top = 416.0
margin_right = 736.0
margin_bottom = 492.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="Node2D"]
margin_left = 536.0
margin_top = 416.0
margin_right = 616.0
margin_bottom = 492.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node2D"]
margin_left = 504.0
margin_top = 296.0
margin_right = 776.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 1 )
text = "DO YOU WANNA GO BACK 
TO MAIN MENU?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1144.0
margin_top = 48.0
margin_right = 1220.0
margin_bottom = 124.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Node2D/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Node2D/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]
